--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -80,6 +80,8 @@ import org.apache.tools.ant.taskdefs.condition.Os
 
 project.ext.react = [
     bundleInDebug: true,
+    enableHermes: false, 
+    
      // clean and rebuild if changing
 ]
 
