--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-navigation/native": "^6.0.11",
-    "@react-navigation/native-stack": "^6.7.0",
+    "@react-navigation/native": "^6.0.12",
+    "@react-navigation/native-stack": "^6.8.0",
     "react": "17.0.2",
-    "react-native": "0.68.2"
+    "react-native": "0.68.2",
+    "react-native-paper": "^4.12.4",
+    "react-native-safe-area-context": "^4.3.3",
+    "react-native-screens": "^3.16.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
