--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@react-navigation/native-stack": "^6.8.0",
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-camera": "^4.2.1",
+    "react-native-camera-hooks": "^0.5.3",
+    "react-native-fs": "^2.20.0",
     "react-native-paper": "^4.12.4",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.16.0"
