--- a/android/build.gradle
+++ b/android/build.gradle
@@ -49,5 +49,11 @@ allprojects {
         }
         google()
         maven { url 'https://www.jitpack.io' }
+        
+        jcenter() {
+            content {
+                includeModule("com.yqritc", "android-scalablevideoview")
+            }
+        }
     }
 }
