--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
     "react": "17.0.2",
@@ -17,9 +18,11 @@
     "react-native-camera": "^4.2.1",
     "react-native-camera-hooks": "^0.5.3",
     "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "^2.6.0",
     "react-native-paper": "^4.12.4",
     "react-native-safe-area-context": "^4.3.3",
-    "react-native-screens": "^3.16.0"
+    "react-native-screens": "^3.17.0",
+    "react-native-video": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
