--- a/android/build.gradle
+++ b/android/build.gradle
@@ -25,6 +25,8 @@ buildscript {
         classpath("com.android.tools.build:gradle:7.0.4")
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("de.undercouch:gradle-download-task:4.1.2")
+        classpath 'com.google.gms:google-services:4.3.13'
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -47,7 +49,8 @@ allprojects {
                 excludeGroup "com.facebook.react"
             }
         }
-        google()
+       google()  // Google's Maven repository
+       mavenCentral()  // Maven Central repository
         maven { url 'https://www.jitpack.io' }
         
         jcenter() {
