--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,24 +1,30 @@
+# Uncomment the next line to define a global platform for your project
+
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
 platform :ios, '11.0'
 install! 'cocoapods', :deterministic_uuids => false
-
+pod 'GoogleUtilities', :modular_headers => true
+pod 'FirebaseCore', :modular_headers => true
 target 'VIDEO1' do
   config = use_native_modules!
 
   # Flags change depending on the env values.
   flags = get_default_flags()
 
-  use_react_native!(
-    :path => config[:reactNativePath],
+  use_react_native!(:path => config['reactNativePath'],
     # to enable hermes on iOS, change `false` to `true` and then install pods
     :hermes_enabled => flags[:hermes_enabled],
     :fabric_enabled => flags[:fabric_enabled],
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
-
+ pod 'FBReactNativeSpec', :path => "../node_modules/react-native/React/FBReactNativeSpec"
+ pod 'react-native-camera', path: '../node_modules/react-native-camera', subspecs: [
+  'FaceDetectorMLKit'
+]
+ pod 'RNFS', :path => "../node_modules/react-native-fs"
   target 'VIDEO1Tests' do
     inherit! :complete
     # Pods for testing
@@ -28,10 +34,14 @@ target 'VIDEO1' do
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable the next line.
-  use_flipper!()
+  use_flipper!({'Flipper'=>'0.125.0'})
 
   post_install do |installer|
     react_native_post_install(installer)
     __apply_Xcode_12_5_M1_post_install_workaround(installer)
   end
 end
+
+
+
+
