--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
     "add": "^2.0.6",
     "cordova": "^11.0.0",
     "cordova-support-google-services": "^1.4.1",
+    "firebase": "^9.10.0",
+    "link": "^1.5.1",
     "plugin": "^0.3.3",
     "react": "17.0.2",
-    "react-native": "0.68.2",
+    "react-native": "^0.68.3",
     "react-native-camera": "^4.2.1",
     "react-native-camera-hooks": "^0.5.3",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.6.0",
     "react-native-paper": "^4.12.4",
+    "react-native-permissions": "^3.6.1",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
     "react-native-video": "^5.2.0"
