--- a/ios/VIDEO1/Info.plist
+++ b/ios/VIDEO1/Info.plist
@@ -31,6 +31,10 @@
   <string>*your app name* would like to save photos from the app to your gallery</string>
   <key>NSPhotoLibraryUsageDescription</key>
   <string>*your app name* would like to access your photo gallery for uploading images to the app</string>
+  <key>NSMicrophoneUsageDescription</key>
+  <string>Video1 would like to access your microphone to record voice.</string>
+  <key>NSCameraUsageDescription</key>
+  <string>Video1 would like to access your camera to record.</string>
 
 	<key>NSAppTransportSecurity</key>
 	
