--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "react-native-double-tap": "^1.0.1",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.6.0",
+    "react-native-image-picker": "^4.10.0",
     "react-native-media-controls": "^2.3.0",
     "react-native-paper": "^4.12.4",
     "react-native-permissions": "^3.6.1",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
     "react-native-slider": "^0.11.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-video": "^5.2.1"
   },
   "devDependencies": {
