--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
     "add": "^2.0.6",
+    "axios": "^1.1.3",
     "cordova": "^11.0.0",
     "cordova-support-google-services": "^1.4.1",
     "firebase": "^9.10.0",
@@ -25,8 +26,10 @@
     "plugin": "^0.3.3",
     "react": "17.0.2",
     "react-native": "^0.68.3",
+    "react-native-axios": "^0.17.1",
     "react-native-camera": "^4.2.1",
     "react-native-camera-hooks": "^0.5.3",
+    "react-native-document-picker": "^8.1.2",
     "react-native-double-tap": "^1.0.1",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.6.0",
@@ -34,6 +37,7 @@
     "react-native-media-controls": "^2.3.0",
     "react-native-paper": "^4.12.4",
     "react-native-permissions": "^3.6.1",
+    "react-native-popup-dialog": "^0.18.3",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
     "react-native-slider": "^0.11.0",
